# agentsandbox

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TEST.md  agentsandbox  configuration.nix  default.nix  flake.nix  init-fw.sh  keygen.sh  kill.sh  mitm-proxy-ca.key  mitm-proxy-ca.pem  mount-workspace.sh  new.sh  package.nix  required-ca.key  sandbox.sh  start.sh  start2.sh  test.nix  test.sh  tests.sh  vulnix-1.12.1-storedir.patch
.github/workflows/: cargo.yml  package-release.yml
gvisor_experiment/: GVISOR_SPEC.md  configuration.nix  experiment.sh  flake.nix  rootless-probe.sh
kvm_feasibility/: VIRT.md  configuration.nix  flake.nix  qemu-minimal.sh  qemu-virtiofs.sh  result-virt-session  session-vm.nix  virt-experiment.sh
man/: agentsandbox.1
share/agentsandbox/template/: allowed_hosts  configuration.nix  flake.nix  mounts
share/agentsandbox/template/agentsandbox/: flake.nix
src/: main.rs
template/: allowed_hosts  configuration.nix  flake.nix  required-ca.pem  result
template/agentsandbox/: flake.nix
v0_bwrap/: bwrap-seccomp.c  configuration.nix  flake.nix
v1_bwrap/: SPEC.md  configuration.nix  sandbox.sh
