[package]
name = "agentsandbox_rs"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", default-features = false, features = ["derive", "help", "std", "usage"] }
flate2 = "1.1.4"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "default-tls"] }
rustix = { version = "1.1.4", default-features = false, features = ["process"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tar = "0.4.44"
