[package]
name = "agentsandbox"
version = "0.1.0"
description = "Manage isolated NixOS VM sandboxes for agentic workflows"
edition = "2024"
license = "MIT"
repository = "https://github.com/YOUR_GITHUB_OWNER/agentsandbox"
homepage = "https://github.com/YOUR_GITHUB_OWNER/agentsandbox"
readme = "README.md"
keywords = ["nix", "nixos", "vm", "sandbox", "cli"]
categories = ["command-line-utilities", "virtualization"]
include = [
  "src/**",
  "man/**",
  "template/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5.38", default-features = false, features = ["derive", "env", "help", "std", "usage"] }
flate2 = "1.1.4"
pathdiff = "0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "default-tls"] }
rustix = { version = "1.1.4", default-features = false, features = ["fs", "mount", "pipe", "process", "runtime", "thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tar = "0.4.44"
